Updates from Overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -54,6 +54,19 @@ url={https://doi.org/10.1007/BF00702605}
   pages={79-87}
 }
 
+@article{DemonstrationOfRabi-FlopsWithYtterbium171Trapped-IonQubits, 
+    title={Demonstration Of Rabi-Flops With Ytterbium 171 Trapped-Ion Qubits},
+    author={Naleli Matjelo and Nancy Payne and Charles Rigby and Ncamiso Khanyile},
+    journal={July 2021International Journal of Scientific and Research Publications (IJSRP)},
+    year={2021},
+    volume={11(7)},
+    pages={137-153}
+    doi={10.29322/IJSRP.11.07.2021.p11519},
+    issn={2250-3153},
+    url={https://www.researchgate.net/publication/353047693_Demonstration_Of_Rabi-Flops_With_Ytterbium_171_Trapped-Ion_Qubits}
+}
+
+
 @book{fundamentalsOfPhotonics,
   title     = "Fundamentals of Photonics",
   author    = "B.E.A. Saleh, M.C. Teich",
